--- a/templates/login.old.html
+++ b/templates/login.old.html
@@ -30,7 +30,13 @@
 				<label class="control-label visible-ie8 visible-ie9">Contraseña</label>
 				<input class="form-control form-control-solid placeholder-no-fix" type="password" required placeholder="Contraseña" name="password"/>
 			</div>
-			
+			{% if messages %}
+              {% for message in messages %}
+                 <div class="alert alert-danger alert-dismissible" role="alert">
+                   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button><strong>{{ message }}</strong>
+                 </div>
+              {% endfor %}
+           {% endif %}
 			<div class="form-actions">
 				<input type="submit" name="login"/ class="btn grey-gallery uppercase" value="Ingresar">				
 			</div>		
